# binharness

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
binharness/: __init__.py  aflexecutor.py  busybox.py  environment.py  executor.py  inject.py  localenvironment.py  process.py  qemu.py  serialize.py  sshenvironment.py  target.py  util.py
binharness/common/: __init__.py  busybox.py  qemu.py
binharness/environment/: __init__.py  localenvironment.py  sshenvironment.py
binharness/tests/: test_afl.py  test_busybox.py  test_executor.py  test_inject.py  test_localenvironment.py  test_qemu_executor.py  test_sshenvironment.py  test_target_local.py  test_target_serialization.py  test_util.py
binharness/tests/ssh_keys/: test
binharness/types/: __init__.py  environment.py  executor.py  injection.py  io.py  target.py
crates/bh_agent_client/: Cargo.toml
crates/bh_agent_client/src/: bindings.rs
crates/bh_agent_common/: Cargo.toml
crates/bh_agent_common/src/: agent_error.rs  service.rs  types.rs
crates/bh_agent_server/: Cargo.toml
crates/bh_agent_server/src/: main.rs  server.rs  state.rs
crates/bh_agent_server/src/util/: mod.rs  read_chars.rs  set_blocking.rs  unix_functions.rs
python/: bh_agent_client.pyi
python/binharness/: __init__.py  agentenvironment.py  agentprovider.py  localenvironment.py  serialize.py  util.py
python/binharness/bootstrap/: __init__.py  docker.py  ssh.py  subprocess.py
python/binharness/common/: __init__.py  busybox.py  qemu.py
python/binharness/types/: __init__.py  environment.py  executor.py  injection.py  io.py  process.py  stat.py  target.py
python/tests/: conftest.py  test_agentprovider.py  test_busybox.py  test_environment.py  test_executor.py  test_inject.py  test_localenvironment.py  test_qemu_executor.py  test_target_local.py  test_target_serialization.py
python/tests/bootstrap/: test_docker.py  test_ssh.py
python/tests/ssh_keys/: test.pub
