[package]
name = "bh_agent_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = [] }
tarpc = { version = "0.33.0", features = ["tokio1"] }
serde = { version = "1.0.188", features = ["derive"] }
thiserror = "1.0.48"
pyo3 = { version = "0.19.0", optional = true }

[target.'cfg(target_family = "unix")'.dependencies]
nix = { version = "0.27.1", features = ["fs", "user"] }

[features]
python = ["pyo3"]
