[package]
name = "bh_agent_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bh_agent_common = { path = "../bh_agent_common" }
subprocess = "0.2.9"
tarpc = { version = "0.34.0", features = ["full"] }
tokio = { version = "1.32.0", features = ["rt-multi-thread"] }
futures = "0.3.28"
log = "0.4.20"
env_logger = { version = "0.11.2", default-features = false, features = ["auto-color", "humantime"] }
bimap = "0.6.3"
argh = "0.1.12"
unicode_reader = "1.0.2"
which = "6.0.0"

[target.'cfg(target_family = "unix")'.dependencies]
daemonize = "0.5.0"
nix = { version = "0.28.0", features = ["fs", "user"] }
